--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "Gerenciador de Ordens de Serviço",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1063/1063376.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/logo.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     }
   ],
   "start_url": ".",
